@@ -3,6 +3,7 @@
 ==============================
 Release 5.6.0.0
 ==============================
+2015-12-26    NumberBox: If the minimum value is above 0, the minimum value will be parsed first on lost focus
 2015-11-20    EnhancedTreeView: Move raising of the ContainerGenerated to another position to cover derivates of the TreeView[Item] elements
               EnhancedTreeView: Fixed wrong selection of the container when created lazy
               EnhancedTreeView: Handle selection when its done already when loaded and prevent its duplicate adding to the multiselect list
